--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,15 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation (
+            'org.junit.jupiter:junit-jupiter:5.9.3',
+            'com.codeborne:selenide:6.14.1',
+            'org.aeonbits.owner:owner:1.0.12',
+            'org.slf4j:slf4j-simple:2.0.7'
+    )
 }
 
 test {
     useJUnitPlatform()
+    systemProperties(System.getProperties())
 }
