--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -1,5 +1,5 @@
 browser=CHROME
 browserVersion=100
-baseUrl=https://a1qa.com/
+baseUrl=https://client-app.remedylogic.com/
 remoteWebDriver=true
 remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
